# atcoder_env

./: .dockerignore  .gitignore  .zshrc  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml  poetry.lock.bk  pyproject.toml  pyproject.toml.bk  solve.cpp
.config/zsh/: .zshrc
.devcontainer/: devcontainer.json
atcoder-cli-config/: config.json
config/zsh/: .zshrc
sample/: a  a.cpp  solve.ipynb
sample/output/: a
src/: solve.py
src/sample/: a.cpp  a.ipynb  b.py  exp.py
src/sample/output/: a
submission/abc303/: contest.acc.json
