[project]
name = "atcoder"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ryomac", email = "100513663+ryomac1@users.noreply.github.com" }
]
dependencies = [
    "ac-library-python @ git+https://github.com/not522/ac-library-python@58f324e",
    "numpy==1.24.1",
    "scipy==1.10.1",
    "sympy==1.11.1",
    "sortedcontainers==2.4.0",
    "more-itertools==9.0.0",
    "bitarray==2.6.2",
    "mpmath==1.2.1",
    "pandas==1.5.2",
    "ruff>=0.5.5",
    "mypy>=1.11.0",
    "matplotlib>=3.9.2",
    "networkx>=3.3",
    "ipykernel>=6.29.5",
    "tqdm>=4.66.5",
    "polars>=1.6.0",
    "ortoolpy>=0.2.33",
]

readme = "README.md"
requires-python = ">= 3.10"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "mypy>=1.11.1",
    "pytest>=8.3.2",
]


[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "mypy>=1.10.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "F401", # モジュールがインポートされたが、未使用。
    "E402", # インポートはファイルの先頭に置くべきだが、それを無視する設定。
    "E722", # `except`に具体的な例外を指定せずに使うことを避ける警告。未指定の`except`を無視。
    "PLR0913",  # 関数やメソッドに引数が多すぎる（一般的には4つ以上）。無視する設定。
    "PLR2004",  # 定数の代わりにマジックナンバーを使っている場合の警告を無視。
    "PLW2901",  # `for`ループ変数がループの内部で再定義されている場合の警告を無視。
    "N803",  # 引数名は小文字にするべきだが、大文字も許可する設定。
    "N806",  # 変数名は小文字にするべきだが、大文字も許可する設定。
    "N812",  # 小文字の変数を大文字でインポートした場合の警告を無視。
    "E741", # 一文字の変数名（曖昧な変数名）に対する警告を無視する設定。
    "PLR5501",
    "UP035",
]

fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]


[tool.ruff.format]
quote-style = "double"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/atcoder"]
